--- a/corporate-courier.html
+++ b/corporate-courier.html
@@ -24,7 +24,7 @@
 </head>
 
 <body>
-    <section class="airfreight_hero">
+    <section class="corporate_courier_hero">
         <header class="header">
             <div style="margin: 0;" class="row">
                 <div style="padding: 0;" class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-xs-6 nav_logo_col">
@@ -81,7 +81,7 @@
 
         <div class="service_sub_hero">
             <div class="service_sub_hero_head">
-                <h1>X X X X X</h1>
+                <h1>Corporate Courier</h1>
             </div>
         </div>
     </section>
@@ -94,31 +94,87 @@
             <div class="col-xl-9 col-lg-9 col-md-9 col-sm-12 col-12 service_sub_sec1_col2">
                 <div class="service_sub_sec1_strip">
                     <div class="service_sub_strip_item animate fadeInUp">
-                        <img src="img/plane.gif" alt="">
+                        <img src="img/courier.gif" alt="">
                         <div class="about_stripline"></div>
-                        <h6>xXxXxXxXxXxXxX</h6>
+                        <h6>Higher Pace</h6>
                     </div>
                     <div class="service_sub_strip_item animate fadeInUp">
-                        <img src="img/plane.gif" alt="">
+                        <img src="img/courier.gif" alt="">
                         <div class="about_stripline"></div>
-                        <h6>xXxXxXxXxXxXxX</h6>
+                        <h6>Utmost Safety</h6>
                     </div>
                     <div class="service_sub_strip_item animate fadeInUp">
-                        <img src="img/plane.gif" alt="">
+                        <img src="img/courier.gif" alt="">
                         <div class="about_stripline"></div>
-                        <h6>xXxXxXxXxXxXxX</h6>
+                        <h6>Constant Support</h6>
                     </div>
                 </div>
                 <div class="service_sub_sec1_para">
+                    <h3>Make Your Business Easier Than Ever With Our Corporate Courier Service in Dubai</h3>
                     <p>
-                        xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+                        Do you want to make the courier process for your business easier than ever? Then, all you need
+                        is the one-stop solution from INC Express. We work with our corporate clients from multiple
+                        industries to deliver corporate items seamlessly. Our team works 24/7 to deliver corporate items
+                        whenever needed to improve and keep up the process nonstop for a smooth supply chain.
                     </p>
                     <p>
-                        xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+                        We understand that corporate delivery services can succeed only when performed on a reliable and
+                        continued basis. That is why we are the fastest-growing and most capable provider of corporate
+                        delivery services.
                     </p>
                 </div>
             </div>
         </div>
+    </section>
+
+
+
+    <section class="service_sub_paragaphs animate fadeInUp">
+        <h3>INC Express Is a Top-notch Choice For All Your Corporate Courier Needs</h3>
+        <p>
+            Regarding corporate courier services, we at INC Express are a top-notch choice capable of building stable
+            relationships with renowned and leading organizations. Our services can be set up on request and assisted at
+            the most significant level with accuracy, reliability, and impressive skill. Our experts can handle every
+            aspect of your corporate logistics planning, and you will receive a reasonable pricing plan that meets your
+            service needs.
+        </p>
+        <p>
+            We serve businesses across multiple industries. We also have a dedicated team of suppliers who know how to
+            offer the best corporate shipping services with both pick-up and drop-off services. From the moment clients
+            call us and book services with us, we assure them the same-day delivery in case of emergency and even
+            deliver the parcels on time.
+        </p>
+        <p>
+            Having a national network and international delivery expertise, we can provide high-level support to
+            corporate businesses. We can even handle vast volumes of goods worldwide from major destinations. We are
+            even committed to providing excellent warehousing solutions from storing to delivering your goods.
+        </p>
+        <h3>Essential Rules And Regulations For Pharmaceutical Shipping</h3>
+        <p>
+            To ensure agreement with pharma shipment handling in Dubai, it is essential to meet the requirements of both
+            manufacturers and the FDA. For pharma transportation, there are strict requirements to follow the FDA's Code
+            of Federal Regulations.
+            This code provides thorough instructions on the proper handling, temperature control, and documentation of
+            pharmaceutical products. Its role is to maintain high-quality and safe standards for all drugs and vaccines.
+        </p>
+        <p>
+            Additionally, the World Health Organization has established standardized international guidelines for
+            packing and shipping pharmaceutical products, including vaccines. These procedures cover various aspects,
+            such as insulated packing requirements and the submission of vaccine arrival reports.
+        </p>
+        <h3>Advantages of Choosing Corporate Courier With Us</h3>
+        <p>
+            To ensure agreement with pharma shipment handling in Dubai, it is essential to meet the requirements of both
+            manufacturers and the FDA. For pharma transportation, there are strict requirements to follow the FDA's Code
+            of Federal Regulations.
+            This code provides thorough instructions on the proper handling, temperature control, and documentation of
+            pharmaceutical products. Its role is to maintain high-quality and safe standards for all drugs and vaccines
+        </p>
+        <p>
+            Additionally, the World Health Organization has established standardized international guidelines for
+            packing and shipping pharmaceutical products, including vaccines. These procedures cover various aspects,
+            such as insulated packing requirements and the submission of vaccine arrival reports.
+        </p>
     </section>
 
 
@@ -131,33 +187,48 @@
         <div class="row">
             <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 service_sub_sec2_col animate fadeRight">
                 <div class="service_sub_sec2_card1">
-                    <h3>XXXXXXXXXXXXXXXXXXXXXXXXXX</h3>
+                    <h3>Lowest Price Guaranteed</h3>
                     <p>
-                        xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+                        If you check the market competition, you will find that our delivery prices are almost 60% lower
+                        than the competitors! Also, the more items you send to one location at once, the lower the price
+                        you can have,
                     </p>
                 </div>
             </div>
             <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 service_sub_sec2_col animate fadeLeft">
                 <div class="service_sub_sec2_card2">
-                    <h3>XXXXXXXXXXXXXXXXXXXXXXXXXX</h3>
+                    <h3>Delivery When you Want it</h3>
                     <p>
-                        xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+                        Whether it is early morning or midnight delivery, if you want it on-demand or rescheduled on an
+                        emergency basis, we can deliver your items exactly when you want them delivered. For all your
+                        corporate courier delivery needs, we got you covered.
                     </p>
                 </div>
             </div>
             <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 service_sub_sec2_col animate fadeRight">
                 <div class="service_sub_sec2_card1">
-                    <h3>XXXXXXXXXXXXXXXXXXXXXXXXXX</h3>
+                    <h3>Unmatched Quality</h3>
                     <p>
-                        xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+                        When it comes to quality, our warehousing and logistics services are something that could
+                        provide you with exceptional and unparalleled freight solutions.
                     </p>
                 </div>
             </div>
             <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 service_sub_sec2_col animate fadeLeft">
                 <div class="service_sub_sec2_card2">
-                    <h3>XXXXXXXXXXXXXXXXXXXXXXXXXX</h3>
+                    <h3>Professional Drivers</h3>
                     <p>
-                        xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+                        Our drivers for fulfilling your corporate courier needs have prior experience in the delivery
+                        business. We can handle big and small items with the utmost care.
+                    </p>
+                </div>
+            </div>
+            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 service_sub_sec2_col animate fadeRight">
+                <div class="service_sub_sec2_card1">
+                    <h3>Delivery Dashboard</h3>
+                    <p>
+                        From billing to real-time GPS tracking of your orders throughout life, we always keep all the
+                        data in the same place as your deliveries for better convenience.
                     </p>
                 </div>
             </div>
@@ -167,27 +238,48 @@
 
 
     <section class="service_sub_paragaphs animate fadeInUp">
-        <h3>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</h3>
+        <h3>Delivery Solutions Tailored To Your Industry Needs</h3>
         <p>
-            xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+            At INC Express, we take pride in ourselves and our team because of our ability and efficiency to provide
+            customized, excellent, and reliable corporate courier and cargo services. We serve the business needs of a
+            wide range of industries. Our courier service process is designed to optimize your team's workflow besides
+            delivering an exceptional and out-of-the-world customer experience. With us, you can avail of -
         </p>
-        <h3>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</h3>
+        <ul>
+            <li>Full-service package with real-time updates.</li>
+            <li>End-to-end courier solutions for corporates with successful supply chain management.</li>
+            <li>Customized pick-up and drop-delivery services for a vast range of industries.</li>
+            <li>An extensive group of specialized drivers for the courier services.</li>
+        </ul>
+        <h3>End-to-end Delivery Solutions: <br>What You Get When You Partner with INC Express</h3>
         <p>
-            xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+            Do you want to make the courier process for your business easier than ever? Then, all you need is the
+            one-stop solution from INC Express. We work with our corporate clients from multiple industries to deliver
+            corporate items seamlessly. Our team works 24/7 to deliver corporate items whenever needed to improve and
+            keep up the process nonstop for a smooth supply chain.
+        </p>
+        <p>
+            We understand that corporate delivery services can succeed only when performed on a reliable and continued
+            basis. That is why we are the fastest-growing and most capable provider of corporate delivery services.
         </p>
     </section>
 
 
-<h2 class="why_us_text">Why Us</h2>
+    <h2 class="why_us_text">Why Us</h2>
     <section class="service_sub_sec3">
-        <img src="img/Group 381.png" alt="">
-        <div class="row service_sub_sec3_card_container">
+        <img src="img/Group 384.png" alt="">
+        <div class="row service_sub_sec3_card_container cont_bg_6">
             <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 service_sub_sec3_col animate fadeInUp">
                 <div class="service_sub_sec3_card">
                     <div class="service_sub_sec3_card_path">
-                        <h3>XXXXXXXXXXXXX</h3>
+                        <h3>Tailor-made
+                            Delivery Solutions</h3>
                         <p>
-                            xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+                            We create a unique and tailor-made custom delivery plan for your corporate delivery needs.
+                            After discussing your unique business goals, challenges, objectives, and expectations, we
+                            start the process. It helps us craft an exclusive solution with the right people, processes,
+                            and technology. With our end, you can have a custom proposal based on your company type and
+                            business niche at the most affordable price.
                         </p>
                     </div>
                 </div>
@@ -195,9 +287,11 @@
             <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 service_sub_sec3_col animate fadeInUp">
                 <div class="service_sub_sec3_card">
                     <div class="service_sub_sec3_card_path">
-                        <h3>XXXXXXXXXXXXX</h3>
+                        <h3>Specialized Technical Support To Your Business</h3>
                         <p>
-                            xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+                            We select the best tools to optimize courier order management and improve customer
+                            experience. Our software and API are incorporated with ERPs, marketplaces, e-commerce
+                            platforms, and custom solutions on both desktop and mobile.
                         </p>
                     </div>
                 </div>
@@ -205,9 +299,13 @@
             <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 service_sub_sec3_col animate fadeInUp">
                 <div class="service_sub_sec3_card">
                     <div class="service_sub_sec3_card_path">
-                        <h3>XXXXXXXXXXXXX</h3>
+                        <h3>24/7 and Complete Dispatch Support</h3>
                         <p>
-                            xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+                            At INC Express, we are committed to offering benefits to businesses with our dedicated
+                            dispatch team. By working closely with you, we ensure seamless delivery operations. The
+                            people who work as dispatchers with us are problem-solving experts. The whole team is always
+                            ready to help you and answer your queries and doubts instantly through the available
+                            communication channels you use.
                         </p>
                     </div>
                 </div>
@@ -218,23 +316,18 @@
             <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 service_sub_sec3_col animate fadeInUp">
                 <div class="service_sub_sec3_card">
                     <div class="service_sub_sec3_card_path">
-                        <h3>XXXXXXXXXXXXX</h3>
+                        <h3>In-depth Delivery Analytics</h3>
                         <p>
-                            xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+                            As we believe in work transparency, we provide our clients with comprehensive access and
+                            in-depth delivery analytics of their deliveries with key performance indicators such as
+                            order quality, time, distance, and expenses. While all the data are neatly organized, it
+                            helps us to send clients proper reports about their orders. Thus, you can make more informed
+                            decisions about optimizing your courier operations based on vital business insights.
                         </p>
                     </div>
                 </div>
             </div>
-            <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 service_sub_sec3_col animate fadeInUp">
-                <div class="service_sub_sec3_card">
-                    <div class="service_sub_sec3_card_path">
-                        <h3>XXXXXXXXXXXXX</h3>
-                        <p>
-                            xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-                        </p>
-                    </div>
-                </div>
-            </div>
+            <div class="col-xl-4 col-lg-4 col-md-0 col-sm-0 col-0 animate fadeInUp"></div>
         </div>
     </section>
 
