--- a/shipment-to-far-east.html
+++ b/shipment-to-far-east.html
@@ -24,7 +24,7 @@
 </head>
 
 <body>
-    <section class="airfreight_hero">
+    <section class="far_east_shipment_hero">
         <header class="header">
             <div style="margin: 0;" class="row">
                 <div style="padding: 0;" class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-xs-6 nav_logo_col">
@@ -81,7 +81,7 @@
 
         <div class="service_sub_hero">
             <div class="service_sub_hero_head">
-                <h1>X X X X X</h1>
+                <h1>Shipment To Far East</h1>
             </div>
         </div>
     </section>
@@ -94,70 +94,28 @@
             <div class="col-xl-9 col-lg-9 col-md-9 col-sm-12 col-12 service_sub_sec1_col2">
                 <div class="service_sub_sec1_strip">
                     <div class="service_sub_strip_item animate fadeInUp">
-                        <img src="img/plane.gif" alt="">
+                        <img src="img/cargo-ship.gif" alt="">
                         <div class="about_stripline"></div>
-                        <h6>xXxXxXxXxXxXxX</h6>
+                        <h6>Rapid Speed</h6>
                     </div>
                     <div class="service_sub_strip_item animate fadeInUp">
-                        <img src="img/plane.gif" alt="">
+                        <img src="img/cargo-ship.gif" alt="">
                         <div class="about_stripline"></div>
-                        <h6>xXxXxXxXxXxXxX</h6>
+                        <h6>Safety At Par</h6>
                     </div>
                     <div class="service_sub_strip_item animate fadeInUp">
-                        <img src="img/plane.gif" alt="">
+                        <img src="img/cargo-ship.gif" alt="">
                         <div class="about_stripline"></div>
-                        <h6>xXxXxXxXxXxXxX</h6>
+                        <h6>Transparent Mechanism</h6>
                     </div>
                 </div>
                 <div class="service_sub_sec1_para">
                     <p>
-                        xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-                    </p>
-                    <p>
-                        xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-                    </p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-
-
-
-
-
-
-    <section class="service_sub_sec2">
-        <div class="row">
-            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 service_sub_sec2_col animate fadeRight">
-                <div class="service_sub_sec2_card1">
-                    <h3>XXXXXXXXXXXXXXXXXXXXXXXXXX</h3>
-                    <p>
-                        xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-                    </p>
-                </div>
-            </div>
-            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 service_sub_sec2_col animate fadeLeft">
-                <div class="service_sub_sec2_card2">
-                    <h3>XXXXXXXXXXXXXXXXXXXXXXXXXX</h3>
-                    <p>
-                        xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-                    </p>
-                </div>
-            </div>
-            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 service_sub_sec2_col animate fadeRight">
-                <div class="service_sub_sec2_card1">
-                    <h3>XXXXXXXXXXXXXXXXXXXXXXXXXX</h3>
-                    <p>
-                        xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-                    </p>
-                </div>
-            </div>
-            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 service_sub_sec2_col animate fadeLeft">
-                <div class="service_sub_sec2_card2">
-                    <h3>XXXXXXXXXXXXXXXXXXXXXXXXXX</h3>
-                    <p>
-                        xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+                        As your business experiences growth, the need to streamline operations becomes increasingly
+                        important. One necessary aspect of this is effectively managing your inventory, whether it's
+                        within your facility or in transit. The international freight services to far east assist you in
+                        monitoring your shipments, providing you with real-time information with consistent customer
+                        support.
                     </p>
                 </div>
             </div>
@@ -167,27 +125,81 @@
 
 
     <section class="service_sub_paragaphs animate fadeInUp">
-        <h3>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</h3>
+        <h3>Commercial Shipping</h3>
+    </section>
+
+
+
+    <section class="service_sub_sec2">
+        <div class="row">
+            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 service_sub_sec2_col animate fadeRight">
+                <div class="service_sub_sec2_card1">
+                    <p>
+                        International shipping refers to the delivery of large quantities of products to businesses at
+                        their designated addresses, such as warehouses or medical centers. It mainly serves B2B
+                        transactions and does not involve direct delivery to individual consumers.
+                    </p>
+                </div>
+            </div>
+            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 service_sub_sec2_col animate fadeLeft">
+                <div class="service_sub_sec2_card2">
+                    <p>
+                        Businesses commonly choose this method for international transportation needs and to acquire
+                        bulk supplies or replenish their inventory. Additionally, businesses benefit from significant
+                        discounts on shipment costs due to the large volumes of products being transported
+                        simultaneously.
+                    </p>
+                </div>
+            </div>
+            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 service_sub_sec2_col animate fadeRight">
+                <div class="service_sub_sec2_card1">
+                    <p>
+                        It can be a beneficial method of transportation for businesses as it is commonly linked to
+                        larger quantities, leading to lower costs per individual unit. Unlike regional shipping,
+                        international shipping is typically conducted in sizable containers and is less expensive. Once
+                        a business completes a sale, the manner in which it manages future impact the demand for its
+                        later orders.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+
+    <section class="service_sub_paragaphs animate fadeInUp">
+        <h3>Things To Consider The Shipping Services</h3>
         <p>
-            xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-        </p>
-        <h3>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</h3>
-        <p>
-            xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+            In the UAE, businesses needing international shipping understand the necessity of a dependable shipping
+            service. There are various factors to consider when choosing a shipping service, but the most important one
+            is reliability. Inc Express Shipping LLC includes all the essential aspects of a reliable shipping service
+            in the UAE. Here are some of the important aspects to consider while selecting an international shipment
+            service Dubai:
+
         </p>
     </section>
 
 
-<h2 class="why_us_text">Why Us</h2>
+    <h2 class="why_us_text">Why Us</h2>
     <section class="service_sub_sec3">
-        <img src="img/Group 381.png" alt="">
-        <div class="row service_sub_sec3_card_container">
+        <img src="img/Group 383.png" alt="">
+        <div class="row service_sub_sec3_card_container cont_bg_7">
             <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 service_sub_sec3_col animate fadeInUp">
                 <div class="service_sub_sec3_card">
                     <div class="service_sub_sec3_card_path">
-                        <h3>XXXXXXXXXXXXX</h3>
+                        <h3>Safe Packaging And Delivery</h3>
                         <p>
-                            xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+                            In the UAE, a reliable shipping service needs to select the package security with their
+                            timely delivery. Hence, the selected shipping service must ensure that your items are
+                            packaged and transported securely without any harm or delay. To ensure the safety of your
+                            items, it is advisable to inquire about the packaging and delivery procedures of the
+                            shipment to far east you select in the UAE.
+                        </p>
+                        <p>
+                            A reputable shipping service should offer a variety of packaging options based on the type
+                            and value of your items. Additionally, shipments to Far East must have a proven track record
+                            of delivering packages on time, which fills the confidence that your items will arrive as
+                            expected.
                         </p>
                     </div>
                 </div>
@@ -195,9 +207,22 @@
             <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 service_sub_sec3_col animate fadeInUp">
                 <div class="service_sub_sec3_card">
                     <div class="service_sub_sec3_card_path">
-                        <h3>XXXXXXXXXXXXX</h3>
+                        <h3>Expert And Experienced Team</h3>
                         <p>
-                            xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+                            If you need the shipping services, it is important to consider the trained and informed
+                            staff as a vital characteristic of a trustworthy shipping service. This aspect holds utmost
+                            significance when deciding about selecting a shipping company
+                        </p>
+                        <p>
+                            It is important to ensure that the individuals responsible for handling the shipment have
+                            the necessary knowledge about the shipping procedures and the expertise to ensure the safe
+                            and on-time arrival of your cargo at its planned destination.
+                        </p>
+                        <p>
+                            With the vast and tricky regulations of the UAE, it is essential to choose a shipping
+                            company that has experience in the local shipping regulations. Additionally, the team must
+                            have strong knowledge of the customs process and assist you in the quick and smooth movement
+                            of your shipment through customs without facing any issues.
                         </p>
                     </div>
                 </div>
@@ -205,9 +230,19 @@
             <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 service_sub_sec3_col animate fadeInUp">
                 <div class="service_sub_sec3_card">
                     <div class="service_sub_sec3_card_path">
-                        <h3>XXXXXXXXXXXXX</h3>
+                        <h3>Affordable Shipping</h3>
                         <p>
-                            xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+                            There are various shipping services to Far East available in the UAE, but their quality and
+                            services can vary to some extent. It is important to consider cost-effective options when
+                            selecting a shipping service while evaluating the features of a reliable shipping service.
+                            The best cost-effective shipping services will provide a wide range of shipping choices that
+                            meet your requirements.
+                        </p>
+                        <p>
+                            Moreover, these services will have a solid reputation for reliability. It gives you the
+                            confidence to deliver your shipment quickly and in excellent condition. The process of
+                            choosing a shipping service is quite challenging, but considering these facts helps you to
+                            find an affordable and reliable service.
                         </p>
                     </div>
                 </div>
@@ -218,9 +253,15 @@
             <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 service_sub_sec3_col animate fadeInUp">
                 <div class="service_sub_sec3_card">
                     <div class="service_sub_sec3_card_path">
-                        <h3>XXXXXXXXXXXXX</h3>
+                        <h3>Detailed Insurance Cover</h3>
                         <p>
-                            xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+                            When searching for a responsible shipping service in the UAE, it is essential to select a
+                            shipping service with wide insurance coverage. This insurance assures that your
+                            shipment will be protected against potential damages or losses while in transport
+                        </p>
+                        <p>
+                            It includes unexpected incidents, which include natural calamity theft, which ensures you
+                            considerable relief regarding your shipment is fully protected.
                         </p>
                     </div>
                 </div>
@@ -228,9 +269,22 @@
             <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 service_sub_sec3_col animate fadeInUp">
                 <div class="service_sub_sec3_card">
                     <div class="service_sub_sec3_card_path">
-                        <h3>XXXXXXXXXXXXX</h3>
+                        <h3>Shipping Options</h3>
                         <p>
-                            xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+                            When searching for a shipping service to Far East in the UAE, it is beneficial to be aware
+                            that a reputable service must provide a wide range of shipping choices. Thus, select the
+                            option that connects effectively with your requirements. You can select express shipping for
+                            urgent deliveries, and an economical shipping option can help if there are no urgent
+                            requirements.
+                        </p>
+                        <p>
+                            When it comes to selecting the best international freight services to far east, there are
+                            various aspects to consider. However, if you aim to find a reliable choice that will ensure
+                            the delivery of your belongings, then selecting a reliable shipping service is the best
+                            decision. If you are searching for a shipping service that includes all the properties of a
+                            responsible shipping service in the UAE, then connect to Inc Express Shipping LLC. With
+                            their extensive experience in the shipping industry, Inc Express Shipping LLC is the
+                            one-stop destination for all your shipping requirement.
                         </p>
                     </div>
                 </div>
