--- a/temprature-controlled-cargo.html
+++ b/temprature-controlled-cargo.html
@@ -24,7 +24,7 @@
 </head>
 
 <body>
-    <section class="airfreight_hero">
+    <section class="temp_controlled_cargo_hero">
         <header class="header">
             <div style="margin: 0;" class="row">
                 <div style="padding: 0;" class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-xs-6 nav_logo_col">
@@ -81,7 +81,7 @@
 
         <div class="service_sub_hero">
             <div class="service_sub_hero_head">
-                <h1>X X X X X</h1>
+                <h1>TEMPERATURE CONTROLLED CARGO</h1>
             </div>
         </div>
     </section>
@@ -94,27 +94,34 @@
             <div class="col-xl-9 col-lg-9 col-md-9 col-sm-12 col-12 service_sub_sec1_col2">
                 <div class="service_sub_sec1_strip">
                     <div class="service_sub_strip_item animate fadeInUp">
-                        <img src="img/plane.gif" alt="">
+                        <img src="img/car-temperature.gif" alt="">
                         <div class="about_stripline"></div>
-                        <h6>xXxXxXxXxXxXxX</h6>
+                        <h6>Cautious Professionals</h6>
                     </div>
                     <div class="service_sub_strip_item animate fadeInUp">
-                        <img src="img/plane.gif" alt="">
+                        <img src="img/car-temperature.gif" alt="">
                         <div class="about_stripline"></div>
-                        <h6>xXxXxXxXxXxXxX</h6>
+                        <h6>Accurate Precaution</h6>
                     </div>
                     <div class="service_sub_strip_item animate fadeInUp">
-                        <img src="img/plane.gif" alt="">
+                        <img src="img/car-temperature.gif" alt="">
                         <div class="about_stripline"></div>
-                        <h6>xXxXxXxXxXxXxX</h6>
+                        <h6>Minimal Risk</h6>
                     </div>
                 </div>
                 <div class="service_sub_sec1_para">
                     <p>
-                        xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+                        At INC Express, we put consistent efforts in providing absolute temperature control services to
+                        our clients. Being a responsible and reliable shipping company, we don't want our clients to
+                        bear any losses or disadvantage of dealing in perishable or sensitive goods and hence we offer
+                        exclusive temperature-controlled cargo services. No matter you deal with medical equipment's or
+                        dangerous goods like chemical substances, we have something for all.
                     </p>
                     <p>
-                        xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+                        We are the leading temperature control freight forwarding company in Dubai that provides
+                        modernised equipment on all the stages of the process. We have specialised warehousing and
+                        refrigerators that provide require the temperature to your products. We do not support any
+                        chemical additions, and hence we assure our clients with the quality of their goods.
                     </p>
                 </div>
             </div>
@@ -131,33 +138,39 @@
         <div class="row">
             <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 service_sub_sec2_col animate fadeRight">
                 <div class="service_sub_sec2_card1">
-                    <h3>XXXXXXXXXXXXXXXXXXXXXXXXXX</h3>
+                    <h3>Perishable Goods</h3>
                     <p>
-                        xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+                        Our temperature-control service concentrates on the perishable goods like medical items,
+                        laboratory equipment's, highly perishable medicines etc. We ensure that all these products stay
+                        intact and maintain their freshness.
                     </p>
                 </div>
             </div>
             <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 service_sub_sec2_col animate fadeLeft">
                 <div class="service_sub_sec2_card2">
-                    <h3>XXXXXXXXXXXXXXXXXXXXXXXXXX</h3>
+                    <h3>Dangerous Goods</h3>
                     <p>
-                        xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+                        We provide exclusive care and equipment for different classes of dangerous goods varying from
+                        liquid gases to toxic and infectious substances. We have DG agents with approval from GCAA and
+                        IATA.
                     </p>
                 </div>
             </div>
             <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 service_sub_sec2_col animate fadeRight">
                 <div class="service_sub_sec2_card1">
-                    <h3>XXXXXXXXXXXXXXXXXXXXXXXXXX</h3>
+                    <h3>Oil & Gas</h3>
                     <p>
-                        xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+                        We understand that middle-east is a hub of oil and gas refineries and hence we offer extensive
+                        shipping options of oil and gas products.
                     </p>
                 </div>
             </div>
             <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 service_sub_sec2_col animate fadeLeft">
                 <div class="service_sub_sec2_card2">
-                    <h3>XXXXXXXXXXXXXXXXXXXXXXXXXX</h3>
+                    <h3>Critical Cargo Handling</h3>
                     <p>
-                        xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+                        Our DG agents have specialised skills and knowledge to handle such dangerous goods. Without any
+                        hassle and chaos, our DG agents provide substantial care.
                     </p>
                 </div>
             </div>
@@ -166,7 +179,7 @@
 
 
 
-    <section class="service_sub_paragaphs animate fadeInUp">
+    <!-- <section class="service_sub_paragaphs animate fadeInUp">
         <h3>XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX</h3>
         <p>
             xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
@@ -175,19 +188,20 @@
         <p>
             xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
         </p>
-    </section>
+    </section> -->
 
 
-<h2 class="why_us_text">Why Us</h2>
+    <h2 class="why_us_text">Why Us</h2>
     <section class="service_sub_sec3">
-        <img src="img/Group 381.png" alt="">
-        <div class="row service_sub_sec3_card_container">
+        <img src="img/Group 380.png" alt="">
+        <div class="row service_sub_sec3_card_container cont_bg_4">
             <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 service_sub_sec3_col animate fadeInUp">
                 <div class="service_sub_sec3_card">
                     <div class="service_sub_sec3_card_path">
-                        <h3>XXXXXXXXXXXXX</h3>
+                        <h3>Service for All</h3>
                         <p>
-                            xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+                            Our varied temperature control cargo shipment covers services for different sectors ranging
+                            from healthcare to food and edible product.
                         </p>
                     </div>
                 </div>
@@ -195,9 +209,10 @@
             <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 service_sub_sec3_col animate fadeInUp">
                 <div class="service_sub_sec3_card">
                     <div class="service_sub_sec3_card_path">
-                        <h3>XXXXXXXXXXXXX</h3>
+                        <h3>Express Transportation</h3>
                         <p>
-                            xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+                            Rather than opting for slower and irregular logistic services, choose our Express
+                            Transportation solution for your perishable and putrescible goods.
                         </p>
                     </div>
                 </div>
@@ -205,9 +220,10 @@
             <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 service_sub_sec3_col animate fadeInUp">
                 <div class="service_sub_sec3_card">
                     <div class="service_sub_sec3_card_path">
-                        <h3>XXXXXXXXXXXXX</h3>
+                        <h3>Reliable Service</h3>
                         <p>
-                            xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+                            With our expertise, reach, and knowledge; you can rest assured that your freight and its
+                            transportation are in good hands.
                         </p>
                     </div>
                 </div>
@@ -218,9 +234,10 @@
             <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 service_sub_sec3_col animate fadeInUp">
                 <div class="service_sub_sec3_card">
                     <div class="service_sub_sec3_card_path">
-                        <h3>XXXXXXXXXXXXX</h3>
+                        <h3>Freight Monitoring</h3>
                         <p>
-                            xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+                            We have cargo monitoring systems equipped with the containers to make sure that all products
+                            and goods are safe and sound.
                         </p>
                     </div>
                 </div>
@@ -228,9 +245,10 @@
             <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 service_sub_sec3_col animate fadeInUp">
                 <div class="service_sub_sec3_card">
                     <div class="service_sub_sec3_card_path">
-                        <h3>XXXXXXXXXXXXX</h3>
+                        <h3>Global and Local Expertise</h3>
                         <p>
-                            xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+                            Our agenda is to fulfil our client's requirements with complete precision and effort to
+                            enhance their satisfaction.
                         </p>
                     </div>
                 </div>
