--- a/sea-freight.html
+++ b/sea-freight.html
@@ -24,7 +24,7 @@
 </head>
 
 <body>
-    <section class="airfreight_hero">
+    <section class="seafreight_hero">
         <header class="header">
             <div style="margin: 0;" class="row">
                 <div style="padding: 0;" class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-xs-6 nav_logo_col">
@@ -94,17 +94,17 @@
             <div class="col-xl-9 col-lg-9 col-md-9 col-sm-12 col-12 service_sub_sec1_col2">
                 <div class="service_sub_sec1_strip">
                     <div class="service_sub_strip_item animate fadeInUp">
-                        <img src="img/plane.gif" alt="">
+                        <img src="img/cargo-ship.gif" alt="">
                         <div class="about_stripline"></div>
                         <h6>Higher Pace</h6>
                     </div>
                     <div class="service_sub_strip_item animate fadeInUp">
-                        <img src="img/plane.gif" alt="">
+                        <img src="img/cargo-ship.gif" alt="">
                         <div class="about_stripline"></div>
                         <h6>Utmost Safety</h6>
                     </div>
                     <div class="service_sub_strip_item animate fadeInUp">
-                        <img src="img/plane.gif" alt="">
+                        <img src="img/cargo-ship.gif" alt="">
                         <div class="about_stripline"></div>
                         <h6>Constant Support</h6>
                     </div>
@@ -190,8 +190,8 @@
 
     <h2 class="why_us_text">Why Us</h2>
     <section class="service_sub_sec3">
-        <img src="img/Group 381.png" alt="">
-        <div class="row service_sub_sec3_card_container">
+        <img src="img/Group 377.png" alt="">
+        <div class="row service_sub_sec3_card_container cont_bg_2">
             <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-12 service_sub_sec3_col animate fadeInUp">
                 <div class="service_sub_sec3_card">
                     <div class="service_sub_sec3_card_path">
